--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aspose.Words" version="21.10.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.1" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.PowerPoint" version="12.0.4518.1014" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net472" />
   <package id="NTwain" version="3.7.0" targetFramework="net472" />
+  <package id="Office" version="12.0.0" targetFramework="net472" />
+  <package id="Spire.Doc" version="9.9.6" targetFramework="net472" />
 </packages>
