增加滚动控件

--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -100,11 +100,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Control\LoadingWait .xaml.cs">
+      <DependentUpon>LoadingWait .xaml</DependentUpon>
+    </Compile>
     <Compile Include="Control\WordToPDFControl.xaml.cs">
       <DependentUpon>WordToPDFControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\ItemMenu.cs" />
     <Compile Include="ViewModel\SubItem.cs" />
+    <Page Include="Control\LoadingWait .xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Control\MenuItemControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
