--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Aspose.Words" version="21.10.0" targetFramework="net472" />
+  <package id="Autoupdater.NET.Official" version="1.7.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.1" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
